; ModuleID = '/home/carl/AnghaBench/vlc/modules/spu/extr_logo.c_LogoCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/spu/extr_logo.c_LogoCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_11__ = type { i32, i32, i32, i32, i32, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"logo-file\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"logo-x\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"logo-y\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"logo-position\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"logo-opacity\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"logo-repeat\00", align 1
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i64, i8*)* @LogoCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LogoCallback(i32* %0, i8* %1, i64 %2, i64 %3, i8* %4) #0 {
  %6 = alloca %struct.TYPE_9__, align 4
  %7 = alloca %struct.TYPE_9__, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_11__*, align 8
  %12 = alloca %struct.TYPE_10__*, align 8
  %13 = bitcast %struct.TYPE_9__* %6 to i64*
  store i64 %2, i64* %13, align 4
  %14 = bitcast %struct.TYPE_9__* %7 to i64*
  store i64 %3, i64* %14, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %15 = bitcast %struct.TYPE_9__* %6 to i64*
  %16 = load i64, i64* %15, align 4
  %17 = call i32 @VLC_UNUSED(i64 %16)
  %18 = load i8*, i8** %10, align 8
  %19 = bitcast i8* %18 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %19, %struct.TYPE_11__** %11, align 8
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 5
  store %struct.TYPE_10__* %21, %struct.TYPE_10__** %12, align 8
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %22, i32 0, i32 1
  %24 = call i32 @vlc_mutex_lock(i32* %23)
  %25 = load i8*, i8** %9, align 8
  %26 = call i32 @strcmp(i8* %25, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %36, label %28

28:                                               ; preds = %5
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %30 = call i32 @LogoListUnload(%struct.TYPE_10__* %29)
  %31 = load i32*, i32** %8, align 8
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @LogoListLoad(i32* %31, %struct.TYPE_10__* %32, i32 %34)
  br label %87

36:                                               ; preds = %5
  %37 = load i8*, i8** %9, align 8
  %38 = call i32 @strcmp(i8* %37, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %45, label %40

40:                                               ; preds = %36
  %41 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %44 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %43, i32 0, i32 4
  store i32 %42, i32* %44, align 4
  br label %86

45:                                               ; preds = %36
  %46 = load i8*, i8** %9, align 8
  %47 = call i32 @strcmp(i8* %46, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %54, label %49

49:                                               ; preds = %45
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %53 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %52, i32 0, i32 3
  store i32 %51, i32* %53, align 4
  br label %85

54:                                               ; preds = %45
  %55 = load i8*, i8** %9, align 8
  %56 = call i32 @strcmp(i8* %55, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %63, label %58

58:                                               ; preds = %54
  %59 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %61, i32 0, i32 2
  store i32 %60, i32* %62, align 4
  br label %84

63:                                               ; preds = %54
  %64 = load i8*, i8** %9, align 8
  %65 = call i32 @strcmp(i8* %64, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0))
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %73, label %67

67:                                               ; preds = %63
  %68 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @VLC_CLIP(i32 %69, i32 0, i32 255)
  %71 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %72 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %71, i32 0, i32 1
  store i32 %70, i32* %72, align 4
  br label %83

73:                                               ; preds = %63
  %74 = load i8*, i8** %9, align 8
  %75 = call i32 @strcmp(i8* %74, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0))
  %76 = icmp ne i32 %75, 0
  br i1 %76, label %82, label %77

77:                                               ; preds = %73
  %78 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %81 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %80, i32 0, i32 0
  store i32 %79, i32* %81, align 4
  br label %82

82:                                               ; preds = %77, %73
  br label %83

83:                                               ; preds = %82, %67
  br label %84

84:                                               ; preds = %83, %58
  br label %85

85:                                               ; preds = %84, %49
  br label %86

86:                                               ; preds = %85, %40
  br label %87

87:                                               ; preds = %86, %28
  %88 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %89 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %88, i32 0, i32 0
  store i32 1, i32* %89, align 4
  %90 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %91 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %90, i32 0, i32 1
  %92 = call i32 @vlc_mutex_unlock(i32* %91)
  %93 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %93
}

declare dso_local i32 @VLC_UNUSED(i64) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @LogoListUnload(%struct.TYPE_10__*) #1

declare dso_local i32 @LogoListLoad(i32*, %struct.TYPE_10__*, i32) #1

declare dso_local i32 @VLC_CLIP(i32, i32, i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
